fixed horizontal bleed when viewing in inspect

--- a/css/footer.css
+++ b/css/footer.css
@@ -71,7 +71,7 @@ footer {
   }
 
   .links {
-    min-width: 375px;
+    width: 375px;
     padding-left: 80px;
   }
 }
